--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "chessboard-svg",
   "version": "1.0.0",
   "description": "Minimal SVG Chessboard Renderer Library",
-  "main": "svgchessboard.js",
+  "main": "./dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [
     "chess",
@@ -12,5 +12,11 @@
     "svg"
   ],
   "author": "Davide Aversa",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@types/jest": "^26.0.20",
+    "jest": "^26.6.3",
+    "ts-jest": "^26.5.2",
+    "typescript": "^4.2.2"
+  }
 }
